add little styling

--- a/sass.scss
+++ b/sass.scss
@@ -1,12 +1,24 @@
-html {
-  background-color: #fff;
-}
-
 body {
-
+  margin: 0;
+  padding-top: 50px;
 }
 
-header {
-  background-color: pink;
-  height: 70px;
+html {
+  margin: auto;
+}
+
+/*fixed bar w logo and login info*/
+nav {
+  background-color: #222;
+  overflow: hidden;
+  width: 100%;
+  top: 0;
+  color: #fff;
+  font-size: 20px;
+}
+
+.jumbotron {
+  p.details {
+    font-size: 20px;
+  }
 }
